# wordle_solver

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  coi-serviceworker.js  index.html  wordle_solver.data  wordle_solver.html  wordle_solver.js  wordle_solver.wasm  wordle_solver_imgui.html  wordle_solver_imgui.js  wordle_solver_imgui.wasm
data/bopomofo/: possible.txt  valid.txt
data/japanese/: possible.txt  valid.txt
data/nerdlegame/: possible.txt  valid.txt
data/nerdlegame_mini/: possible.txt  valid.txt
data/wordlegame/: possible.txt
data/zidou/: possible.txt  valid.txt
include/: context.hpp  dataset.hpp
script/: nerdlegame_answer_generator.py
src/: CMakeLists.txt  cli.cpp  imgui.cpp  shell_minimal.html
